css/bootstrap.css
@charset "UTF-8";
/*!
 * Bootstrap v5.0.2 (https://getbootstrap.com/)
 * Copyright 2011-2021 The Bootstrap Authors
 * Copyright 2011-2021 Twitter, Inc.
 * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
 */
:root {
  --bs-blue: #0d6efd;
  --bs-indigo: #6610f2;
  --bs-purple: #6f42c1;
  --bs-pink: #d63384;
  --bs-red: #dc3545;
  --bs-orange: #fd7e14;
  --bs-yellow: #ffc107;
  --bs-green: #198754;
  --bs-teal: #20c997;
  --bs-cyan: #0dcaf0;
  --bs-white: #fff;
  --bs-gray: #6c757d;
  --bs-gray-dark: #343a40;
  --bs-primary: #0d6efd;
  --bs-secondary: #6c757d;
  --bs-success: #198754;
  --bs-info: #0dcaf0;
  --bs-warning: #ffc107;
  --bs-danger: #dc3545;
  --bs-light: #f8f9fa;
  --bs-dark: #212529;
  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

@media (prefers-reduced-motion: no-preference) {
  :root {
    scroll-behavior: smooth;
  }
}
/* ========== CUSTOM CSS ========== */

body {
  margin: 0;
  font-family: Didot, Didot LT STD, Hoefler Text, Garamond, Calisto MT, Times New Roman, serif;
  font-size: 1rem;
  font-weight: 600;
  font-variant: small-caps;
  line-height: 1.5;
  color: #212529;
  background-color: #fff;
  -webkit-text-size-adjust: 100%;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /* Hide scrollbar for IE, Edge and Firefox */
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}
/* Hide scrollbar for Chrome, Safari and Opera */
body::-webkit-scrollbar {
  display: none;
}

video {
  width: 100%;
}

.intro, .servicesDesc H1 {
  margin: 1rem;
  text-align: center;
  text-shadow: 1px 1px 2px #0d6efd;
  font-family: Optima, Segoe, Segoe UI, Candara, Calibri, Arial, sans-serif;
  font-weight: bold;
}

@media (min-width: 576px) {
  .intro {
    margin: 0.5rem 1.5rem;
    font-size: 1rem;
  }
}

@media (min-width: 768px) {
  .intro {
    margin: 1rem 5rem;
    font-size: 1.5rem;
  }
}

@media (min-width: 992px) {
  .intro {
    margin: 1rem 10rem;
    font-size: 1.5rem;
  }
}
@media (min-width: 1200px) {
  .intro {
    margin: 1rem 20rem;
    font-size: 2rem;
  }
}
@media (min-width: 1400px) {
  .intro {
    margin: 1rem 20rem;
    font-size: 2rem;
  }
}

.containerColor {
  background: rgb(171,171,171);
  background: -moz-linear-gradient(160deg, rgba(171,171,171,1) 15%, rgba(255,255,255,0.31836484593837533) 50%, rgba(13,110,253,1) 100%);
  background: -webkit-linear-gradient(160deg, rgba(171,171,171,1) 15%, rgba(255,255,255,0.31836484593837533) 50%, rgba(13,110,253,1) 100%);
  background: linear-gradient(160deg, rgba(171,171,171,1) 15%, rgba(255,255,255,0.31836484593837533) 50%, rgba(13,110,253,1) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ababab",endColorstr="#0d6efd",GradientType=1);
  padding: 2rem;
  --bs-gutter-y: 0; !important;
  --bs-gutter-x: 0; !important;
}

.sub-containerColor {
  /*background-color: #ababab;*/
  background-color: rgba(88, 89, 92, 1);
  border: #647691 4px solid;
  padding: 2rem;
}

hr {
  border: none;
  border-top: 1px solid rgba(255,255,255,.3);
  border-bottom: 1px solid rgba(0,0,0,.08);
  margin: 1em 0;
  position: relative;
}
hr:before,hr:after {
  content: '';
  position: absolute;
  bottom:0;
  height: 5em;
  width: 100%;
  background: radial-gradient(ellipse at bottom, rgba(255,255,255,0.35) 0%,rgba(255,255,255,0) 70%);
  z-index:0;
}
hr:after {
  top:0;
  bottom:auto;
  height: 1.5em;
  background: radial-gradient(ellipse at top, rgba(0,0,0,0.06) 0%,rgba(0,0,0,0) 70%);
}

/* ========== CUSTOM CSS/Index ========== */

.howDoesItWork {
  width: 100%;
  margin-top: 2rem;
  padding: 1rem;
  background: rgb(171,171,171);
  background: -moz-linear-gradient(160deg, rgba(171,171,171,1) 15%, rgba(255,255,255,0.31836484593837533) 50%, rgba(13,110,253,1) 100%);
  background: -webkit-linear-gradient(160deg, rgba(171,171,171,1) 15%, rgba(255,255,255,0.31836484593837533) 50%, rgba(13,110,253,1) 100%);
  background: linear-gradient(160deg, rgba(171,171,171,1) 15%, rgba(255,255,255,0.31836484593837533) 50%, rgba(13,110,253,1) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ababab",endColorstr="#0d6efd",GradientType=1);
  box-shadow: 10px 10px 25px #000;
}

.howDoesItWork h1 {
  text-align: center;
  text-shadow: 1px 2px 5px #0d6efd;
}

@media (min-width: 576px) {
  .howDoesItWork, .trainingList {
    margin: 1rem;
    font-size: 1.25rem;
  }
}

@media (min-width: 768px) {
  .howDoesItWork, .trainingList {
    margin: 1rem;
    font-size: 1.25rem;
  }
}

@media (min-width: 992px) {
  .howDoesItWork, .trainingList {
    margin: 2rem;
    font-size: 1.5rem;
  }
}
@media (min-width: 1200px) {
  .howDoesItWork, .trainingList {
    margin: 2rem;
    font-size: 1.5rem;

  }
}
@media (min-width: 1400px) {
  .howDoesItWork {
    margin: 2rem;
    font-size: 2rem;
  }
}
@media (min-width: 1400px) {
  .trainingList {
    margin: 2rem;
    font-size: 2rem;

  }
}

.lureImgHome {
  margin: 1rem 4rem 2rem;
  width: 100%;
  box-shadow: -10px 10px 25px #000;
}

@media (max-width: 767px) {
  .lureImgHome {
    margin: 2rem 2rem 0 0;
  }
}
/* ... */

